# detecting-llm-authorship

./: README.md  pyproject.toml
Data/AuTextification/: README.md  subtask_two_test.tsv
Data/Common_Words/: README.md  coca_most_frequent_words.txt  grab_words.py
Data/EmotionLexicon/: README.md  emolex.csv  to_csv.py
Deliverables/: KPIs.tex
Scripts/: feature_extraction.py  grab_feature.py  group_data.py  submission.ipynb
