[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detect_llm_authorship"
version = "0.1.0"
description = "Detection of LLM authorship."
readme = "README.md"
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "matplotlib>=3.4",
  "scikit-learn",
  "textblob",
  "spacy",
  "py-readability-metrics @ git+https://github.com/cdimascio/py-readability-metrics.git@master",
  "nltk"
]

[tool.setuptools.packages.find]
where   = ["."]
exclude = ["Data*", "Scripts*", "Deliverables*"]